updated field names in mongodb
