# controllers/users.js
@@ -29,8 +29,12 @@ const getSingle = async (req, res) => {
 // CREATE SINGLE USER
 const createUser = async (req, res) => {
     const user = {
-        name: req.body.name,
-        age:req.body.age
+        firstName: req.body.firstName,
+        lastName:req.body.lastName,
+        email:req.body.email,
+        favoriteColor:req.body.favoriteColor,
+        birthday:req.body.birthday
+
     };
     const response = await mongodb.getDatabase().db().collection('users').insertOne(user);
     if (response.acknowledged) {
@@ -45,8 +49,11 @@ const createUser = async (req, res) => {
 const updateUser = async (req, res) => {
     const userId = new ObjectId(req.params.id);
     const user = {
-        name: req.body.name,
-        age:req.body.age
+        firstName: req.body.firstName,
+        lastName:req.body.lastName,
+        email:req.body.email,
+        favoriteColor:req.body.favoriteColor,
+        birthday:req.body.birthday
     };
     const response = await mongodb.getDatabase().db().collection('users').replaceOne({_id: userId}, user);
     if (response.modifiedCount) {
